18:Fixed horizontal scroll bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
 html {
-  height: 100%;
 }
 
 body {
@@ -15,8 +14,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-#root {
-  min-height: 100vh;
 }
